[package]
name = "sudoku"
version = "1.0.6"
authors = ["Zheoni <zheoni@outlook.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_seeder = "0.2"
rand_pcg = "0.3"
clap = { version = "2.33", optional = true }

[features]
default = ["build-binary"]
build-binary = ["clap"]

[[bin]]
name = "sudoku"
required-features = ["build-binary"]
